tf2-chatterbox/index.css
/*
 * HTML Elements
*/

html {
  padding: 0;
  margin: 0;
}

body {
  background-color: #FFFFFF;

  padding: 0;
  margin: 0;
  margin-bottom: 5px;

  font-family: monospace;
}

a {
  color: #2E92FF;
}

a.visited {
  color: #0E5DB2;
}

h1, h2, h3, h4, h5, h6 {
  -webkit-margin-before: 0.5em;
  -webkit-margin-after: 0.5em;
}

table {
  border-collapse: collapse;
  table-layout: fixed;
}

table, th, td {
  border: 1px solid black;
  padding: 5px;
}

textarea {
  margin: 0px;
  width: 100%;

  outline: none;
  resize: none;
  overflow: auto;

  border-style: none;
}

/*
 * ID-Specific rules
*/

#container {
  width: 100%;
  /*height: 100%;*/
}

#content {
  width: 98%;

  margin-left: 1%;
  margin-right: 1%;
}

#generator-table {
  margin: auto;
  width: 80%;
  min-width: 800px;
}

/*
 * Here's where the classes start
*/

.gen-heading-text {
  text-align: center;
}

.required {
  font-weight: 800;
  color: #FF0000;
}

.text-hilight {
  color: #E74C4C;
}

.donate {
  font-size: 1.3em;
  font-weight: 600;
}

.textOnlyButton {
  cursor: pointer;
  color: #2E92FF;

  font-weight: 600;
  font-size: 1.1em;
  text-decoration: underline;

  background: none;
  border: none;
  margin: 0;
  padding: 0;
}

